src/css/main.scss
/* ... */
.rankingNumber {
	font-family: Lato;
	font-style: normal;
	font-weight: bold;
	font-size: 1.1em;
	//line-height: 20px;

	color: $myOrange;

	display: flex;
	align-items: center;
	justify-content: center;
	margin-right: 10px;
}

.highlightedRankingNumber {
	font-size: 1.9em;
	color: $myViolet;
}

/* --------------------------------- */
/* ------------- SECTION ----------- */
/* --------------------------------- */

.section {
	background-color: white;
	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
	padding: 3%;
}
.sectionTitle {
	color: #464646;
	font-style: normal;
	font-weight: bold;
	font-size: 1.1em;
	line-height: 0px;
	
	margin-bottom: 25px;

	text-align: left;
}

/* ----------------------------------------- */
/* -------------- INTRODUCTION ------------- */
/* ----------------------------------------- */

#intro {
	//height : 15%;
}

.introText {
	font-size: 0.85em;
	line-height: auto;
	color: $myGrey75;
}

.citatimacButton .box {
	width: 23%;
	padding: 2% 1%;
	text-transform: uppercase;
	font-weight: bold;
	font-size: 0.8em;
	letter-spacing: 0.05em;
	//border : 2px solid $myViolet;

}

.citatimacButton:hover .box:hover {
	background-color : $myOrange;
	color : white;
	
}

/* ----------------------------------------- */
/* ----------- TOP DES CITATIONS ----------- */
/* ----------------------------------------- */
$citationHeight: 68px;

#topCitations { 
	height: 80%;
	display: flex;
	flex-direction: column;

	.box {
		width: $citationHeight;
		height: $citationHeight;
		font-size: 0.8em;
		.nbLikes {
			font-size: 1.2em;
			font-weight: bold;
		}
	}
}

.citationText {
	font-style: italic;
	font-weight: bold;
	font-size: $defaultTextSize;
	line-height: 13px;
	overflow: auto;
	height: auto;
	margin-block-start: 0.5em;
	color: $myGrey75;
	flex-grow: 1;
}
.citationAuthor {
	font-style: normal;
	font-weight: normal;
	font-size: 0.75em;
	line-height: 5px;
	color: #BEBEBE;
	align-self: flex-start;
	margin-bottom: 2px;
}

.citationContainer {
	margin-bottom : 4%;
	margin-left : 0%;
	width: 95%;
	//height : 20%;

	display: grid;
	grid-template-columns: 10% 17% 73%;
	
	.rankingNumber {
		grid-column-start: 1;
	}
	.box {
		grid-column-start: 2;
	}
	.citationTextAndAuthor {
		grid-column-start: 3;
	}
}

.citationTextAndAuthor {
	display: flex;
	align-items: flex-start;
	flex-direction: column;
	height: $citationHeight;
	margin-left: 5%;
	display: flex;
	flex-direction: column;
}

.pageNavigation {
	margin-top: auto;
	font-size: 0.8em;
	padding-top: 1%;
	color: #6C6C6C;
	display: flex;
	justify-content: center;
	.pageNavInput {
		margin-right: 5px;
	}
	.pageNavButtons {
		display: flex;
		button {
			&:hover {
				cursor: pointer;
			}
			&:disabled {
				cursor: default;
			}
		}
	}

	input {
		width: 25px;
		height: 14px;
		border: 1px solid #DDDDDD;
		box-sizing: border-box;
		border-radius: 2px;
		font-size: 1em;
		font-family: Roboto;
		padding: 3px;
		color: #6C6C6C;
	}
	button {
		background-color: $myViolet;
		color: white;
		border-radius: 2px;

		width: 14px;
		height: 14px;
		margin: 0 1px;

		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;

		border: none;
		outline: none;
		transition: .2s;
	  
		&:active {
			background: $myOrange;
		}
		&:hover {
			background: $myOrange;
		}
		&:disabled {
			/*visibility: hidden;*/
			background: white;
		}
	}
}

/* ----------------------------------------- */
/* ----------- TOP DES CONNERIES ----------- */
/* ----------------------------------------- */

#topConneries { 
	width: 35%;
	display: flex;
	flex-direction: column;
	padding-top:2%;
	padding-bottom:2%;

	.conneriesAuthorList{
		
	}

	.authorType {
		font-size: 0.8em;
		color: $myGrey75;
	}
	.box {
		padding: 4% 1%;
		background-color: $myOrange;
		.nbCitationsAuthorType {
			font-size: 0.85em;
			font-weight: bold;
		}
	}
	:first-child {
		.box {
			background-color: $myViolet;
		}
		.authorType {
			font-size: 0.8em;
			font-weight: bold;
			color: $myViolet;
		}
	}
}

.conneriesContainer {
	width: 95%;
	margin: 0;
	display: grid;
	grid-template-columns: 10% 60% 32%;
	
	.rankingNumber {
		grid-column-start: 1;
	}
	.authorType {
		grid-column-start: 2;
	}
	.box {
		grid-column-start: 3;
	}
}

/* ----------------------------------------- */
/* ------------- TOP DES TAGS -------------- */
/* ----------------------------------------- */

 #topTags {
	width: 50%;
	display : flex;
	flex-direction : column;
	padding-top:2%;
	padding-bottom:2%;
 }

/* ----------------------------------------- */
/* -------------- OVER TIME ---------------- */
/* ----------------------------------------- */
#overTime {
	padding:2%;
	display: flex;
	flex-direction : column;
	width: 94%;
}

.formTime{
	text-align: right;
	button {
		border-radius: 4px;
		height: 25px;
		text-align: center;
	}
	#selectMonthOrYearButtons {
		margin: 3px;
		button {
			margin : 3px;
			width: 85px;
			&:enabled {
				background: rgba(201, 201, 201, 0.1);
				color : #9C9C9C;
				&:focus {
					outline: none;
				}
				&:hover {
					cursor: pointer;
				}
			}
			&:disabled {
				background: $myOrange;
				mix-blend-mode: normal;
				border: 1px solid #FDD31C;
				box-sizing: border-box;
				color : white;
			}
		}
	}
}



/***************************************/
/************* RESPONSIVE **************/
/***************************************/

@media (max-width:1415px) {
 
/* -------------- BODY ------------- */
body { 
	margin: 1% 2%;
}

.section {
	margin: 5px;
}

/* ------------- SECTION ----------- */
.sectionTitle {
	font-size: 1em;
}

/* -------------- INTRODUCTION ------------- */
.introText {
	font-size: 0.75em;
}

/* ----------- TOP DES CITATIONS ----------- */
.citationTextAndAuthor {
	margin-left: 10%;
}

.pageNavigation {
	font-size: 0.7em;
}

/* ----------- TOP DES CONNERIES ----------- */
#topConneries { 
	.box {
		.nbCitationsAuthorType {
			font-size: 0.75em;
		}
	}
}

/* ------------- TOP DES TAGS -------------- */
 #topTags {
	width: 49%;
 }

}
/* ... */

